--- a/TODO
+++ b/TODO
@@ -7,3 +7,7 @@ Copyright (C) 1996-2002 Hans Reiser
 
 * should we have reset method in object plugins? does call like seek(obj, 0) will not be 
   convenient enough
+
+* should we throw out uint32_t additional param (unit pos) from item plugin functions?
+* should all plugins (object plugins) know about reiser4_cache_t?
+* should we have core->item_ops->item_plugin function? not item_pid one?
