--- a/TODO
+++ b/TODO
@@ -12,3 +12,6 @@ Copyright (C) 1996-2002 Hans Reiser
 * should all plugins (object plugins) know about reiser4_cache_t?
 * should we have core->item_ops->item_plugin function? not item_pid one?
 * rename internal40 to nodeptr40
+* should items have read/write methods?
+* should we splitt reiser4_sf_cerate and reiser4_fs_open onto separate functions?
+
