--- a/TODO
+++ b/TODO
@@ -2,12 +2,13 @@ This file is part of reiser4progs package
 Copyright (C) 1996-2002 Hans Reiser
 
 * all functions which return errno_t should return real errno, not just -1.
-* add INVALID_BLK macro and return it from the all blk-returning functions as error value.
 
 * should we have reset method in object plugins? does call like seek(obj, 0) will not be 
   convenient enough
 
-* should we throw out uint32_t additional param (unit pos) from item plugin functions?
-* should items have read/write methods?
-* should we split reiser4_fs_cerate and reiser4_fs_open onto separate functions?
-* probably tree traverse function should belong to tree object.
+* should we have uint32_t additional param (unit pos) in item plugin functions?
+* should items have read/write methods? or they should be called insert/remove?
+* should we split reiser4_fs_create and reiser4_fs_open onto separate functions?
+* probably tree traverse function should belong to the tree?
+* reiser4_joint_realize may be improved by rid of lookup
+
