Added debugfs manual page.
(Logical change 1.2515)

--- a/doc/mkfs.reiser4.8
+++ b/doc/mkfs.reiser4.8
@@ -59,7 +59,7 @@ prints known profiles.
 .SH REPORTING BUGS
 Report bugs to <umka@namesys.com>, <reiserfs-list@namesys.com>
 .SH SEE ALSO
-.BR libreiser4 (8),
+.BR libreiser4 (8)
 .SH AUTHOR
 This manual page was written by Yury Umanets <umka@namesys.com>
 
