--- a/TODO
+++ b/TODO
@@ -7,13 +7,12 @@ Copyright (C) 1996-2002 Hans Reiser
   not be convenient enough
 
 * should we have uint32_t additional param (unit pos) in item plugin functions?
-* should items have read/write methods? or they should be called insert/remove?
 * should we split reiser4_fs_create and reiser4_fs_open onto separate functions?
-* probably tree traverse function should belong to the tree?
 * reiser4_joint_realize may be improved by rid of lookup
 * add check of all journal strucrures durring replaying the journal
-* remove all kind of item-specific functions from item.c (for example, 
-  reiser4_item_get_smode)
 * probably we should do not have sdext specific methods, like get_mode, set_mode 
   in stat40 plugin
-* add plugin group field into plugin structure, like item plugins have.
+* move the all common code of reg40 and dir40 plugins to separate file and let them 
+  use it.
+* rewrite progs/libmisc/profile.c in order to be using the last chnages in plugin 
+  header structure.
