Changes in debugfs .
(Logical change 1.2528)

--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -42,7 +42,7 @@ makes debugfs to use whole disk, not block device or mounted partition.
 .B -t, --print-tree
 prints the internal tree.
 .TP
-.B -s, --print-super-block
+.B -s, --print-super
 prints the both super blocks: master super block and format specific one.
 .TP
 .B -j, --print-journal
