Cleanups in libmisc.
(Logical change 1.2562)

--- a/doc/mkfs.reiser4.8
+++ b/doc/mkfs.reiser4.8
@@ -55,6 +55,9 @@ profile to be used.
 .TP
 .B -K, --known-profiles
 prints known profiles.
+.TP
+.B -P, --known-plugins
+prints known plugins.
 .RS
 .SH REPORTING BUGS
 Report bugs to <umka@namesys.com>, <reiserfs-list@namesys.com>
