--- a/TODO
+++ b/TODO
@@ -12,5 +12,5 @@ Copyright (C) 1996-2002 Hans Reiser
 * move the all common code of reg40 and dir40 plugins to separate file and let them 
   use it.
 
-* rewrite progs/libmisc/profile.c in order to be using the last chnages in plugin 
+* rewrite progs/libmisc/profile.c in order to be using the last changes in plugin 
   header structure.
