Added check for COMPACT code in all fsck code of all plugins. By now print methods active only in normal mode. Added print methods to alloc and journal plugins.
(Logical change 1.2564)

--- a/TODO
+++ b/TODO
@@ -14,3 +14,5 @@ Copyright (C) 1996-2002 Hans Reiser
 
 * rewrite progs/libmisc/profile.c in order to be using the last changes in plugin 
   header structure.
+
+* should we use node print method for printing the all node items?
