--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -58,16 +58,21 @@ prints the block allocator data.
 prints the oid allocator data.
 .SH MEASUREMENT OPTIONS
 .TP
-.B -T, --total-fragmentation
+.B -T, --tree-fragmentation
 measures total tree fragmentation. The result is fragmentation factor
 - value from 0.00 (minimal fragmentation) to 1.00 (maximal one). Most
 probably, this factor may affect sequential read performance.
 .TP
-.B -F, --files-fragmentation
+.B -D, --data-fragmentation
 measures average files fragmentation. It means, that fragmentation of
 each file in filesystem will be measured separately and results will
 be avaraged. The result is fragmentation factor - value from 0.00
 (minimal fragmentation) to 1.00 (maximal one).
+.TP
+.B -F, --file-fragmentation FILE
+measures fragmentation of teh specified file. The result is
+fragmentation factor - value from 0.00 (minimal fragmentation) to 1.00
+(maximal one).
 .SH PLUGIN OPTIONS
 .TP
 .B -e, --profile PROFILE
