Added options --ls and --cat.
(Logical change 1.2603)

--- a/TODO
+++ b/TODO
@@ -20,5 +20,7 @@ reiser4progs/COPYING.
 
 * --data-fragmentation option in debugfs.reiser4
 
-* fix checksum calculating for the last block of bitmap
 * improve tree fragmentation calculating speed by avoiding leaves open
+
+* human readable stat data mode field in debugfs.reiser4 --print-tree
+  --print-items option
