--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -37,6 +37,13 @@ forces using the filesystem without any questions
 .TP
 .B -f, --force
 makes debugfs to use whole disk, not block device or mounted partition.
+.SH BROWSING OPTIONS
+.TP
+.B -l, --ls
+browses passed file like standard ls program.
+.TP
+.B -c, --cat
+browses passed file like standard cat program.
 .SH PRINT OPTIONS
 .TP
 .B -i, --print-items
