Added opening file by its statdata coord
(Logical change 1.2618)

--- a/TODO
+++ b/TODO
@@ -24,3 +24,5 @@ reiser4progs/COPYING.
 
 * human readable stat data mode field in debugfs.reiser4 --print-tree
   --print-items option
+
+* pos.c where pos relatited code should lie
