Fixes in gauge and in debugfs
(Logical change 1.2619)

--- a/TODO
+++ b/TODO
@@ -18,11 +18,9 @@ reiser4progs/COPYING.
 
 * FIBMAP ioctl implementation in reiser4
 
-* --data-fragmentation option in debugfs.reiser4
-
 * improve tree fragmentation calculating speed by avoiding leaves open
 
 * human readable stat data mode field in debugfs.reiser4 --print-tree
   --print-items option
 
-* pos.c where pos relatited code should lie
+* pos.c where reiser4_pos_t relatited code should lie
