--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -52,6 +52,9 @@ forces debugfs.reiser4 to print item content when --print-tree specified.
 .B -t, --print-tree
 prints the internal tree.
 .TP
+.B -n, --print-block N
+prints block by passed block number.
+.TP
 .B -s, --print-super
 prints the both super blocks: master super block and format specific one.
 .TP
