All plugins were moved to dedicated to corresponding type directory.
(Logical change 1.2656)

--- a/TODO
+++ b/TODO
@@ -14,10 +14,8 @@ reiser4progs/COPYING.
 
 * print_block method for format, journal and block allocator plugins.
 
-* improve lru list for storing different objects in it
+* improve lru list for storing different objects and move it to libaal
 
 * join reiser4_node_t and reiser4_joint_t
 
 * special file plugin.
-
-* tree refference in the reiser4_coord_t
