--- a/TODO
+++ b/TODO
@@ -24,3 +24,5 @@ reiser4progs/COPYING.
 * copy bitmap functions Vitaly need
 
 * changes in aal_list_find_custom and aal_list_insert_sorted
+
+* few disk-format changes (direntry format, big digits storing in stat data)
