Cleanups in tree.c and node.c.
(Logical change 1.2700)

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ reiser4progs/COPYING.
 
 * shift method for item plugins.
 
+* merge neighbour mergeable items if they lie inside the same node
+
 * --print-journal and --print-alloc options in debugfs.
 
 * FIBMAP ioctl implementation in reiser4
@@ -16,6 +18,8 @@ reiser4progs/COPYING.
   allocator plugins.
 
 * improve lru list for storing different objects and move it to libaal
+
+* aal_block_t buffer list on device layer
 
 * join reiser4_node_t and reiser4_joint_t
 
@@ -28,3 +32,5 @@ reiser4progs/COPYING.
 * few disk-format changes (direntry format, big digits storing in stat data)
 
 * move some part of tree_shift method to node API
+
+* callbacks in tree_insert and tree_remove functions
