Lookup was moved from insert and removed methods of tree. Lots of cleanups.
(Logical change 1.2736)

--- a/TODO
+++ b/TODO
@@ -39,4 +39,4 @@ reiser4progs/COPYING.
   directories.
 
 * symlinks and special files browsing in debugfs.
-* creating extents
+* creating extents code in extent40 plugin.
