--- a/TODO
+++ b/TODO
@@ -23,6 +23,10 @@ reiser4progs/COPYING.
 
 * few disk-format changes (direntry format, big digits storing in stat data)
 
+
+* allocator needs a callback for forbidden block checking while allocating 
+  a new block. Bitmap of forbidden blocks is here alloc->forbid
+
 * improve balacing for the case when we are going to insert new unit
   at the end of last item in node. Suppose right neighbour exists and
   has enough free space. In this case we should insert new unit into
