A lot of fixes in balancing code. By now left shifting is working fine too. Fixes in debugfs.c. Fixes in debugs.reiser4.8 manual page.
(Logical change 1.2749)

--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -68,16 +68,15 @@ prints the block allocator data.
 prints the oid allocator data.
 .SH MEASUREMENT OPTIONS
 .TP
-.B -N, --node-packing
-measures formatted node packing degree. The result is avarage used
-space in nodes on passed filesystem.
+.B -S, --tree-stat
+shows different tree statistics (node packing, internal nodes, leaves, etc)
 .TP
-.B -T, --tree-fragmentation
+.B -T, --tree-frag
 measures total tree fragmentation. The result is fragmentation factor
 - value from 0.00000 (minimal fragmentation) to 1.00000 (maximal one). Most
 probably, this factor may affect sequential read performance.
 .TP
-.B -D, --data-fragmentation
+.B -D, --data-frag
 measures average files fragmentation. It means, that fragmentation of
 each file in filesystem will be measured separately and results will
 be avaraged. The result is fragmentation factor - value from 0.00000
@@ -86,7 +85,7 @@ be avaraged. The result is fragmentation factor - value from 0.00000
 Note, that for the fresh filesystem (created not very long time ago)
 and even fully filled by data, this value will be pretty small.
 .TP
-.B -F, --file-fragmentation FILE
+.B -F, --file-frag FILE
 measures fragmentation of the specified file. The result is
 fragmentation factor - value from 0.00000 (minimal fragmentation) to
 1.00000 (maximal one). Note, that fragmentation of a small file
@@ -99,6 +98,9 @@ Examples:
 debugfs.reiser4 -F /usr/bin /dev/hda2
 .br
 debugfs.reiser4 -F /bin/bash /dev/hda2
+.TP
+.B -p, --show-each
+show file fragmentation for each file if --data-frag is specified.
 .SH PLUGIN OPTIONS
 .TP
 .B -e, --profile PROFILE
