A lot of comments added in node40.c. Added extent40_insert, extent40_remove, extent40_init, tail40_remove. Cleanups in all items plugins.
(Logical change 1.2751)

--- a/TODO
+++ b/TODO
@@ -23,16 +23,6 @@ reiser4progs/COPYING.
 
 * few disk-format changes (direntry format, big digits storing in stat data)
 
-
-* allocator needs a callback for forbidden block checking while allocating 
-  a new block. Bitmap of forbidden blocks is here alloc->forbid
-
-* improve balacing for the case when we are going to insert new unit
-  at the end of last item in node. Suppose right neighbour exists and
-  has enough free space. In this case we should insert new unit into
-  right neighbour, not int onew allocated node. This will improve node
-  packing substantionaly.
-
 * extent hint for inserting extents into the tree 
 * unit_key function into item plugin 
 
@@ -44,3 +34,7 @@ reiser4progs/COPYING.
 
 * symlinks and special files browsing in debugfs.
 * creating extents code in extent40 plugin.
+
+* insert an extent among internals may require perform shift and
+  insert an item (nor extent or nodeptr) may require to perform so
+  called drilling on the twig level.
