--- a/TODO
+++ b/TODO
@@ -44,3 +44,5 @@ reiser4progs/COPYING.
 
 * return value from the all low level plugin functions should be raised 
   up to the libreiser4 level.
+
+* add overwriting ability to balancing code
