--- a/TODO
+++ b/TODO
@@ -43,7 +43,7 @@ reiser4progs/COPYING.
 
 * add overwriting ability to balancing code
 
-* update of unit key function
+* update of unit key function.
 
 * fix bug with directing debugfs output onto less
   debugfs.reiser4 -tf ~/tmp/loop | less
