Added --print-file handling in debugfs
(Logical change 1.2784)

--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -55,6 +55,9 @@ prints the internal tree.
 .B -n, --print-block N
 prints block by passed block number.
 .TP
+.B -i, --print-file FILE
+prints all metadata blocks specified file occupies.
+.TP
 .B -s, --print-super
 prints the both super blocks: master super block and format specific one.
 .TP
