--- a/TODO
+++ b/TODO
@@ -42,3 +42,5 @@ reiser4progs/COPYING.
 * FIBMAP ioctl implementation in reiser4.
 
 * conform reiser4 and reiser4progs to be worked with LILO and GRUB.
+
+* copy methods in node API.
